manifests/0000_51_olm_01_operator_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cluster-olm-operator
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: "OperatorLifecycleManagerV1"
    workload.openshift.io/allowed: "management"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
