manifests/0000_51_olm_06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-cluster-olm-operator
  name: cluster-olm-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    capability.openshift.io/name: "OperatorLifecycleManagerV1"
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-olm-operator
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
      labels:
        name: cluster-olm-operator
    spec:
      serviceAccountName: cluster-olm-operator
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: cluster-olm-operator
        image: quay.io/openshift/origin-cluster-olm-operator:latest
        terminationMessagePolicy: FallbackToLogsOnError
        ports:
        - containerPort: 8443
          name: metrics
        command:
        - /cluster-olm-operator
        # Remove --warn-on-arg-mismatch after branch cut
        args:
        - start
        - --warn-on-arg-mismatch
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /var/run/secrets/serving-cert
          name: cluster-olm-operator-serving-cert
        - mountPath: /operand-assets
          name: operand-assets
      volumes:
      - name: cluster-olm-operator-serving-cert
        secret:
          secretName: cluster-olm-operator-serving-cert
          optional: true
      - name: operand-assets
        emptyDir: {}
      nodeSelector:
        kubernetes.io/os: linux
        node-role.kubernetes.io/master: ""
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 120
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 120
      priorityClassName: system-cluster-critical
