manifests/0000_51_olm_04_metrics_service.yaml
# Expose operator metrics
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-cluster-olm-operator
  name: cluster-olm-operator-metrics
  annotations:
    include.release.openshift.io/hypershift: "true"
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    capability.openshift.io/name: "OperatorLifecycleManagerV1"
    service.alpha.openshift.io/serving-cert-secret-name: cluster-olm-operator-serving-cert
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    name: cluster-olm-operator
  sessionAffinity: None
  type: ClusterIP
