manifests/0000_51_olm_08_network_policy.yaml
# See https://docs.google.com/document/d/1CDoGSRd-h8VT4PMrK_83Ro0YzYPjORbkxtfTJU1sN6Q/edit?tab=t.0
# for more information on NetworkPolicies
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-cluster-olm-operator
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-openshift-dns
  namespace: openshift-cluster-olm-operator
spec:
  egress:
    - ports:
        - protocol: TCP
          port: dns-tcp
        - protocol: UDP
          port: dns
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-dns
        - podSelector:
            matchLabels:
              dns.operator.openshift.io/daemonset-dns: default
  podSelector:
    matchLabels:
      name: cluster-olm-operator
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-api-server
  namespace: openshift-cluster-olm-operator
spec:
  egress:
    - ports:
        - protocol: TCP
          port: 6443
  podSelector:
    matchLabels:
      name: cluster-olm-operator
  policyTypes:
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-metrics-traffic
  namespace: openshift-cluster-olm-operator
spec:
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
      from:
       - namespaceSelector:
           matchLabels:
             name: openshift-monitoring
  podSelector:
    matchLabels:
      name: cluster-olm-operator
  policyTypes:
    - Ingress
